Fix wrap issue with nav bar

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ ul {
     display: flex;
     gap:20px;
     list-style-type: none;
+    flex-wrap: wrap;
 }
 
 ul li {
